--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
+certifi==2019.9.11
+chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.2.5
-PyMySQL==0.9.3
+django-heroku==0.3.1
 djangorestframework==3.10.3
+docopt==0.6.2
+gunicorn==19.9.0
+idna==2.8
+pipreqs==0.4.9
+PyMySQL==0.9.3
+pytz==2019.2
+requests==2.22.0
+sqlparse==0.3.0
+urllib3==1.25.3
+whitenoise==4.1.3
+yarg==0.1.9
